objects/Course__c.object
<CustomObject>
    <label>Course</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Course Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Types_of_Course__c</fullName>
        <label>Types of Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Certified System Administrator</fullName>
                </value>
                <value>
                    <fullName>Advanced Administrator</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>CPQ Specialist</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud Administrator</fullName>
                </value>
                <value>
                    <fullName>Platform App Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_of_Training__c</fullName>
        <label>Mode of Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Course__c</fullName>
        <label>Duration of Course</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>